Need to make an API to handle server side cause gg

--- a/index.html
+++ b/index.html
@@ -44,6 +44,30 @@
                 <canvas id="secondChart" style="max-width: 500px;"></canvas>
             </div>
         </div>
+        <div class="ai-suggestions">
+            <div class="ai-header">
+                <h1 style="color: red;"><b>AI Suggestion</b></h1>
+            </div>
+            <div class="ai-suggestion">
+                <p>Based on your current health status, we suggest you to take a walk for 30 minutes.</p>
+            </div>
+        </div>
+        <div class="hobby">
+            <div class="hobby-header">
+                <h1 style="color: red;"><b>Hobby</b></h1>
+            </div>
+            <div class="hobby-suggestion">
+                <p>Based on your current health status, we suggest you to take a walk for 30 minutes.</p>
+            </div>
+        </div>
+        <div class="chill-out">
+            <div class="chill-header">
+                <h1 style="color: red;"><b>Chill Out</b></h1>
+            </div>
+            <div class="chill-suggestion">
+                <p>Based on your current health status, we suggest you to take a walk for 30 minutes.</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
