Added a way to write dasta

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <script src="js/jquery-3.7.1.min.js"></script>
 <script type="module" src="controller/index.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+<script src="model/sheets_db.js"></script>
 </head>
 <body>
 
@@ -68,6 +69,7 @@
                 <p>Based on your current health status, we suggest you to take a walk for 30 minutes.</p>
             </div>
         </div>
+        <div id="data-container"></div>
     </div>
 </body>
 </html>
