--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,14 @@
 <title>LifeTime</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="../css/styles.css">
-<link rel="stylesheet" href="../css/current-week.css">
-<script src="../js/jquery-3.7.1.min.js"></script>
+<link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" href="css/current-week.css">
+<script src="js/jquery-3.7.1.min.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
-<script type="module" src="../controller/index.js"></script>
+<script type="module" src="controller/index.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
-<script src="../model/sheets_db.js"></script>
+<script src="model/sheets_db.js"></script>
 </head>
 <body>
 
