--- a/public/index.html
+++ b/public/index.html
@@ -22,13 +22,13 @@
             <h1>LifeTime</h1>
         </div>
         <div class="sidebar-items">
-        <a href="#user" class="sidebar-item choose-create-user" style="position: relative;">Choose/Create User</a>
-        <a href="#" class="sidebar-item">Home</a> 
-        <a href="#services" class="sidebar-item">Schedule</a> 
-        <a href="#showcase" class="sidebar-item">Activity List</a> 
-        <a href="#designers" class="sidebar-item">Performance</a> 
-        <a href="#packages" class="sidebar-item">Monthly Review</a> 
-        <a href="#profile" class="sidebar-item">Life Overview</a>
+            <a href="users/user_sign.html" class="sidebar-item choose-create-user" style="position: relative;">Register/Login</a>
+            <a href="index.html" class="sidebar-item">Home</a> 
+            <a href="#services" class="sidebar-item">Schedule</a> 
+            <a href="#showcase" class="sidebar-item">Activity List</a> 
+            <a href="#designers" class="sidebar-item">Performance</a> 
+            <a href="#packages" class="sidebar-item">Monthly Review</a> 
+            <a href="#profile" class="sidebar-item">Life Overview</a>
         </div>
     </div>
     <div class="main-container">
