--- a/public/users/user_sign.html
+++ b/public/users/user_sign.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="signing.css">
     <script src="../js/jquery-3.7.1.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
     <script type="module" src="../controller/firebase_controller.js"></script>
 </head>
 <body>
@@ -58,14 +59,14 @@
                 </form>
             </div>
             <div class="login">
-                <form class="form">
+                <form class="form" id="loginForm">
                     <p class="title">Login </p>  
                     <label>
-                        <input required="" placeholder="" type="email" class="input">
+                        <input required="" placeholder="" type="email" class="input" id="l_email">
                         <span>Email</span>
                     </label> 
                     <label>
-                        <input required="" placeholder="" type="password" class="input">
+                        <input required="" placeholder="" type="password" class="input" id="l_password">
                         <span>Password</span>
                     </label>
                     <button class="submit">Submit</button>
