--- a/public/users/user_sign.html
+++ b/public/users/user_sign.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="signing.css">
     <script src="../js/jquery-3.7.1.min.js"></script>
+    <script type="module" src="../js/firebase_init.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
