Added Firestore and Controllers

--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,18 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/styles.css">
 <link rel="stylesheet" href="css/current-week.css">
-<script type="module" src="js/firebase_init.js"></script>
-<script src="js/jquery-3.7.1.min.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
+<script src="js/jquery-3.7.1.min.js"></script>
+<script type="module" src="js/firebase_init.js"></script>
 <script type="module" src="controller/index.js"></script>
+<script type="module" src="controller/health_controller.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 <script src="model/sheets_db.js"></script>
 <script src="controller/gemini-controller.js"></script>
+
 </head>
 <body>
 
