--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 <script src="model/sheets_db.js"></script>
 <script src="controller/gemini-controller.js"></script>
-
+<script src="js/togglePopup.js"></script>
 </head>
 <body>
 
@@ -86,7 +86,7 @@
 <div class="popup-overlay active">
     <div class="popup-container">
         <div class="right">
-            <div class="skip-button">Skip in 5s</div>
+            <div class="skip-button">x</div>
 
             <p class="logo">LifeTime</p>
             <h2 class="popup-heading">We would like to know more about you</h2>
@@ -98,8 +98,5 @@
         </div>
     </div>   
 </div>
-
-<script src="../js/togglePopup.js"></script>
-
 </body>
 </html>
