--- a/public/index.html
+++ b/public/index.html
@@ -24,19 +24,23 @@
 
 <div class="container">
     <div class="sidebar-container"><br>
-
         <div class="sidebar-logo">
             <h1>LifeTime</h1>
         </div>
         <div class="sidebar-items">
-            <a href="users/user_sign.html" class="sidebar-item choose-create-user" style="position: relative;">Register/Login</a>
-            <a href="index.html" class="sidebar-item">Home</a> 
-            <a href="#services" class="sidebar-item">Schedule</a> 
-            <a href="#showcase" class="sidebar-item">Activity List</a> 
-            <a href="#designers" class="sidebar-item">Performance</a> 
-            <a href="#packages" class="sidebar-item">Monthly Review</a> 
-            <a href="#profile" class="sidebar-item">Life Overview</a>
-            <div id="logoutPlaceholder"></div>
+            <button class="dropdown-btn">
+                <span class="burger-icon">&#9776;Menu</span> 
+            </button>
+            <div class="dropdown-content sidebar-items">
+                <a href="users/user_sign.html" class="sidebar-item choose-create-user" style="position: relative;">Register/Login</a>
+                <a href="index.html" class="sidebar-item">Home</a> 
+                <a href="#services" class="sidebar-item">Schedule</a> 
+                <a href="#showcase" class="sidebar-item">Activity List</a> 
+                <a href="#designers" class="sidebar-item">Performance</a> 
+                <a href="#packages" class="sidebar-item">Monthly Review</a> 
+                <a href="#profile" class="sidebar-item">Life Overview</a>
+                <div id="logoutPlaceholder"></div>
+            </div>
         </div>
     </div>
     <div class="main-container">
