Issues with the week schedule fix it

--- a/public/index.html
+++ b/public/index.html
@@ -83,6 +83,12 @@
                 <p>Based on your current health status, we suggest you to take a walk for 30 minutes.</p>
             </div>
         </div>
+        <div class="schedule-container"></div>
+        <div class="activity-container"></div>
+        <div class="health-performance-container"></div>
+        <div class="monthly-review-container"></div>
+        <div class="life-overview-container"></div>
+        <div class="week-schedule-container"></div>
         <div id="data-container"></div>
     </div>
 </div>
