--- a/public/index.html
+++ b/public/index.html
@@ -63,8 +63,12 @@
             <div class="ai-header">
                 <h1 style="color: red;"><b>AI Suggestion</b></h1>
             </div>
+            <div class="ai-input-container">
+                <input type="text" id="ai-prompt" placeholder="Ask Gemini AI a question...">
+                <button id="ai-submit">Ask Gemini</button>
+              </div>
             <div class="ai-suggestion">
-                <p>Based on your current health status, we suggest you to take a walk for 30 minutes.</p>
+             
             </div>
         </div>
         <div class="hobby">
