--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="css/styles.css">
 <link rel="stylesheet" href="css/current-week.css">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
@@ -43,6 +44,9 @@
         </div>
     </div>
     <div class="main-container">
+        <div class="header">
+            <h1 style="color: black;font-size: 3em;"><b>Organize Your Life</b></h1>
+        </div>
         <div class="current-week">
             <div class="week-header">
                 <h1 style="color: red;"><b>Current Week</b></h1>
@@ -108,7 +112,7 @@
                 click the button below to get started
             </p>
 
-            <a href="../views/interviewer.html" class="getstarted">Get Started</a>
+            <a href="views/interviewer.html" class="getstarted">Get Started</a>
         </div>
     </div>   
 </div>
