--- a/public/index.html
+++ b/public/index.html
@@ -34,11 +34,11 @@
             <div class="dropdown-content sidebar-items">
                 <a href="users/user_sign.html" class="sidebar-item choose-create-user" style="position: relative;">Register/Login</a>
                 <a href="index.html" class="sidebar-item">Home</a> 
-                <a href="#services" class="sidebar-item">Schedule</a> 
-                <a href="#showcase" class="sidebar-item">Activity List</a> 
-                <a href="#designers" class="sidebar-item">Performance</a> 
-                <a href="#packages" class="sidebar-item">Monthly Review</a> 
-                <a href="#profile" class="sidebar-item">Life Overview</a>
+                <a href="schedule/schedule.html" class="sidebar-item">Schedule</a> 
+                <a href="activity_list/activities.html" class="sidebar-item">Activity List</a> 
+                <a href="performance/performance.html" class="sidebar-item">Performance</a> 
+                <a href="monthly_review/monthly-review.html" class="sidebar-item">Monthly Review</a> 
+                <a href="life_overview/life-overview.html" class="sidebar-item">Life Overview</a>
                 <div id="logoutPlaceholder"></div>
             </div>
         </div>
